<resources>
    <string name="app_name">전세역전</string>

    <!--    필터 설정 화면  -->
    <string name="toolbar_set_filter">필터 설정</string>
    <string name="apartment_btn_search_filter">아파트</string>
    <string name="officetel_btn_search_filter">오피스텔</string>
    <string name="address_searchFilter">주소</string>
    <string name="price_searchFilter">전세</string>
    <string name="area_searchFilter">면적</string>
    <string name="built_searchFilter">준공년도</string>
    <string name="houseType_searchFilter">종류</string>
    <string name="toolbar_saveFilter">저장</string>
    <string name="price_unit_searchFilter">단위: 천만원</string>
    <string name="price_area_searchFilter">단위: 평</string>
    <string name="MAX_RANGE_BAR">제한 없음</string>
    <string name="creditLine_filter">전세대출 한도액 : %1$,d만원</string>

    <!--  매물 화면  -->
    <string name="toolbar_buildingDetail_item">상세 정보</string>
    <string name="area_buildingDetail_item">%1$d평</string>
    <string name="address_buildingDetail_item">%1$s</string>
    <string name="price_buildingDetail_item">%1$,d만원</string>
    <string name="built_buildingDetail_item">%1$d년 건축</string>
    <string name="floor_buildingDetail_item">%1$d층</string>
    <string name="price_buildingDetail_one">%1$,d원</string>

    <!-- 로그인 화면-->
    <string name="id_hint">아이디(이메일)</string>
    <string name="password_hint">비밀번호</string>
    <string name="validPw_hint">비밀번호 재입력</string>
    <string name="accountNum_hint">계좌번호</string>
    <string name="certNum_hint">인증번호</string>
    <string name="phone_hint">연락처(-없이 입력)</string>
    <string name="login_tv">로그인</string>
    <string name="register_tv">회원가입</string>
    <string name="register_title_register">회원가입</string>

    <!--  메인 화면  -->
    <string name="favoriteList_title">찜 목록</string>
    <string name="recentList_title">최근 본 매물</string>
    <string name="searchBuilding_title">매물 찾기</string>
    <string name="money_zero">0원</string>
    <string name="totalMoney_title">자금</string>
    <string name="moreView">더보기</string>
    <string name="recentList_empty">최근 조회한 매물이 없습니다.</string>
    <string name="favoriteList_empty">찜한 매물이 없습니다.</string>
    <string name="totalAccount_explain">계좌 잔액</string>
    <string name="totalExtra_explain">추가 자금</string>
    <string name="loan_explain">대출 가능 금액</string>
    <string name="logout_home">로그아웃</string>
    <string name="extraMoney_home">정보 변경</string>
    <string name="searchBuilding_btn">검색</string>
    <string name="multiHouse_btn_search_filter">연립다세대</string>

    <!--  추가 자산 -->
    <string name="toolbar_change_information">정보 변경</string>
    <string name="extra_price">추가 자산</string>
    <string name="extra_price_description">추가 자산 정보</string>
    <string name="extra_money_hint">단위: 만원</string>
    <string name="year_money_description">연소득</string>
    <string name="rent_price_buildingDetail">대출 상한은 %1$,d만원 입니다.</string>
    <string name="rate_rent_buildingDetail">연 이율은 최대 5.58\%% 산정 총 %1$,d원/년 입니다.</string>
</resources>