<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLogo"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/main_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_id_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_login"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_id_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/id_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_pw_login"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/inputLayout_id_login"
        app:layout_constraintStart_toStartOf="@id/inputLayout_id_login"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_id_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_pw_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_login"
        style="@style/TOTT.FilledButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_pw_login"
        app:layout_constraintWidth_percent="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_login"
        style="@style/TOTT.FilledButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_login"
        app:layout_constraintWidth_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>