<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.extramoney.ExtraMoneyActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_extraMoney"
        style="@style/TOTT.Toolbar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_toolbar_search_filter"
        app:title="@string/toolbar_change_information" />

    <TextView
        android:id="@+id/tv_extra_money_extraMoney"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/extra_price"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_extraMoney" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_money_extra_money"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_extra_money_extraMoney">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_money_extra_money"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/extra_money_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_description"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_money_extra_money">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/year_money_description" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_money_extra_money2"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_money_extra_money2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/extra_money_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_description2"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_money_extra_money2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_description2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/extra_price_description" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_money_extra_money3"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_description2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_money_extra_money3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/extra_money_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_description3"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_money_extra_money3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_description3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/extra_price_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_money_extra_money4"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_description3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_money_extra_money4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/extra_money_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_description4"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_money_extra_money4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_description4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/extra_price_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>